--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -11,7 +11,7 @@ $breakpoint-xl: 1200px;
     monospace;
   --font-size-small: 12px;
 
-  --home-link-color: #9147FF;
+  --home-link-color: #05bce3;
   --home-link-hover-color: var(--primary-color);
 
   --button-color: #e5c3d3;
